--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,8 @@
 global.params.g1=01
 global.params.g2=02
 spring.h2.console.enabled=true
-#
 
+spring.jpa.hibernate.ddl-auto=update
 
 
 spring.cloud.discovery.enabled=true
