--- a/application.properties
+++ b/application.properties
@@ -3,7 +3,9 @@ global.params.g2=02
 spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.path=/h2-console
 
+spring.datasource.url=jdbc:h2:mem:testdb
 
 spring.cloud.discovery.enabled=true
 eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
