--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 global.params.g1=01
 global.params.g2=02
 spring.h2.console.enabled=true
-
+spring.cloud.config.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.path=/h2-console
 
