--- a/produit-service.properties
+++ b/produit-service.properties
@@ -1,6 +1,11 @@
-produit.params.p1=6
-produit.params.p2=7
-spring.datasource.url=jdbc:h2:mem:produits-db
-spring.jpa.hibernate.ddl-auto=update
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5434/produits_db
+spring.datasource.username=produits_user
+spring.datasource.password=produits_password
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-e
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
