--- a/client-service.properties
+++ b/client-service.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/clients_db
+spring.datasource.url=${CLIENT_DB:jdbc:postgresql://localhost:5433/clients_db}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=clients_user
