--- a/Produits.properties
+++ b/Produits.properties
@@ -1,5 +1,5 @@
 # Database Configuration
-spring.datasource.url={$PRODUITS_DB:jdbc:postgresql://localhost:5434/produits_db}
+spring.datasource.url=${PRODUITS_DB:jdbc:postgresql://localhost:5434/produits_db}
 spring.datasource.username=produits_user
 spring.datasource.password=produits_password
 spring.datasource.driver-class-name=org.postgresql.Driver
