--- a/Commandes.properties
+++ b/Commandes.properties
@@ -2,7 +2,7 @@ client.service.url=http://localhost:8081
 produit.service.url=http://localhost:8082
 
 # Database Configuration
-spring.datasource.url={$COMMANDES_DB:jdbc:postgresql://localhost:5432/commandes_db}
+spring.datasource.url=${COMMANDES_DB:jdbc:postgresql://localhost:5432/commandes_db}
 spring.datasource.username=commandes_user
 spring.datasource.password=commandes_password
 spring.datasource.driver-class-name=org.postgresql.Driver
