--- a/Commandes.properties
+++ b/Commandes.properties
@@ -1,5 +1,5 @@
-client.service.url=http://localhost:8081
-produit.service.url=http://localhost:8082
+client.service.url=${CLIENT_URL:http://localhost:8081}
+produit.service.url=${PRODUIT_URL:http://localhost:8082}
 
 # Database Configuration
 spring.datasource.url=${COMMANDES_DB:jdbc:postgresql://localhost:5432/commandes_db}
