--- a/Produits.properties
+++ b/Produits.properties
@@ -1,7 +1,7 @@
 # Database Configuration
 spring.datasource.url=${PRODUITS_DB:jdbc:postgresql://localhost:5434/produits_db}
-spring.datasource.username=produits_user
-spring.datasource.password=produits_password
+spring.datasource.username=${PRODUIT_USER:produits_user}
+spring.datasource.password=${PRODUIT_PASSWORD:produits_password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
