--- a/application.properties
+++ b/application.properties
@@ -12,6 +12,9 @@ management.endpoints.web.exposure.include=*
 eureka.instance.prefer-ip-address=true
 
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${JWT_URI_ISSUER:http://localhost:8080/realms/firstMiniProject}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${JWT_URI_SET:http://localhost:8080/realms/firstMiniProject/protocol/openid-connect/certs}
+
 
 
 
